Revert "Removing unused announcement section"
This reverts commit 5c890735cd514ee1b48ca8ab088e047477de2055.

--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ title: Fluent.Ribbon
 tagline: ''
 description: ''
 url: http://fluentribbon.github.io
+
+paginate: 5
+paginate_path: '/announcements/:num'
