--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
-# Dependencies
-markdown: kramdown
-
-kramdown:
-  input: GFM
-
-highligther: pygments
-
 # Permalinks
 permalink: '/announcements/:title'
 
@@ -17,3 +9,15 @@ url: http://fluentribbon.github.io
 
 paginate: 5
 paginate_path: '/announcements/:num'
+
+# Dependencies
+markdown: kramdown
+
+kramdown:
+  input: GFM
+
+highligther: rouge
+
+gems:
+   - jekyll-coffeescript
+   - jekyll-paginate
